syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/YounesBouchbouk/SimpleBank_-Golang-Postgres-Kubernetes-gRPC-/pb";


message UpdateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message UpdateUserResponse {
    User user = 1;
}